Ensure the home link shows up when the navbar is collapsed

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -330,3 +330,9 @@ div.form-actions {
 .navbar a.kanisa_manage {
     text-decoration: none;
 }
+
+@media (max-width: 768px) {
+    .navbar-header ul.navbar-nav {
+        margin-left: 0;
+    }
+}
